app/globals.css
/* @import url("https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap"); */
@import "tailwindcss";

:root {
  --bg: #1a1a1a;
  --fg: #edf1e8;
  --base-100: #fff;
  --base-200: #3a3a3a;
  --base-300: #000;
  /* for FlipCard */
  --dark: #000;
  --light: #f9f4eb;
  --light2: #f0ece5;
  --accent-1: #e5d9f6;
  --accent-2: #ffd2f3;
  --accent-3: #fcdca6;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Bricolage Grotesque", sans-serif;
}
img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
h1 {
  text-transform: uppercase;
  color: #141414;
  line-height: 1;
  font-size: 12rem;
}
a {
  text-decoration: none;
  text-transform: uppercase;
  font-family: var(--font-bricolage);
  font-size: 0.9rem;
  font-weight: 700;
}
/* a,
p {
  text-decoration: none;
  color: var(--base-100);
  font-family: "Bricolage Grotesque", sans-serif;
  font-size: 0.85rem;
  font-weight: 500;
  line-height: 1;
} */
nav {
  position: fixed;
  width: 100vw;
  padding: 2rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  z-index: 1;
}
.nav-logo a {
  font-family: var(--font-bricolage);
  font-size: 1.25rem;
  font-weight: 700;
}
.nav-links {
  display: flex;
  gap: 2rem;
}
.container {
  position: relative;
  width: 100%;
  height: 100%;
  min-height: 100svh;
  background-color: #e3e4d8;
}
.page-header {
  width: 100vw;
  height: 100svh;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 2rem;
}

.archive {
  width: 30%;
  margin: 0 auto;
  padding: 15rem 2rem;
  display: flex;
  flex-direction: column;
  gap: 2rem;
}
.archive img {
  aspect-ratio: 5/7;
}

.transition-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100svh;
  display: flex;
  pointer-events: none;
  z-index: 2;
}
.block {
  flex: 1;
  height: 100%;
  background-color: #222;
  transform: scaleX(0);
  transform-origin: left;
}
.logo-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100svh;
  z-index: 2;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #222;
  pointer-events: none;
  opacity: 0;
}
.logo-container {
  width: 200px;
  height: 200px;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 20px;
}

@media (max-width: 1000px) {
  h1 {
    font-size: 6rem;
  }
}

